update year automatically

--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -140,7 +140,7 @@
                 </span>
             </div>
         </div>
-        <div class="footerBelow container-fluid text-center"> &copy; <a href="https://github.com/ofunmito" style="color: #fff" target="_blank">funmitoblessed</a>. 2018. All Rights Reserved.</div>
+        <div class="footerBelow container-fluid text-center"> &copy; <a href="https://github.com/ofunmito" style="color: #fff" target="_blank">funmitoblessed</a>. <span id="currentYear"></span> All Rights Reserved.</div>
     </footer>
 
     <!-- CDN. Needs internet -->
