--- a/Project 2/index.html
+++ b/Project 2/index.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Offline bootstrap -->
-    <!-- <link type="text/css" href="css/bootstrap.min.css" rel="stylesheet"> -->
-    <!-- bootstrapcdn -->
+    <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- Fallback Bootstrap -->
+    <link type="text/css" href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
 </head>
 
@@ -140,15 +140,17 @@
                 </span>
             </div>
         </div>
-        <div class="footerBelow container-fluid text-center"> &copy; <a href="https://github.com/ofunmito" style="color: #fff" target="_blank">funmitoblessed</a>. <span id="currentYear"></span> All Rights Reserved.</div>
+        <div class="footerBelow container-fluid text-center"> &copy; <a href="https://ofunmito.github.io" style="color: #fff" target="_blank">funmitoblessed</a>. <span id="currentYear"></span> All Rights Reserved.</div>
     </footer>
 
-    <!-- CDN. Needs internet -->
+    <!-- jQuery CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Fallback jQuery -->
+    <script>
+        window.jQuery || document.write('<script src="./js/jquery-3.3.1.min.js"><\/script>')
+    </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- Offline jquery-3 -->
-    <!-- <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script> -->
+    <script src="js/bootstrap.min.js"></script>
     <script src="./js/script.js" type="text/javascript"></script>
     </div>
 </body>
